# turbovault4dbt_cli

./: .gitignore  README.md  generate_sample_excel.py  log.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
backend/: bigquery.py  db.py  excel.py  googleSheets.py  snowflake.py  turbovault.py
backend/config/: config.ini
backend/metadata_ddl/Excel/: turbovault4dbt_template.xlsx
backend/procs/sqlite3/: generate_selected_entities.py  hub.py  link.py  ma_satellite.py  nh_link.py  nh_satellite.py  pit.py  properties.py  ref.py  rt_satellite.py  satellite.py  stage.py
frontend/: pyqt5.py
metadata_ddl/Excel/: .~lock.sample_datavault_metadata.xlsx#  sample_datavault_metadata.xlsx  sample_metadata.xlsx  sample_metadata_v2.xlsx  sample_metadata_v3.xlsx  turbovault4dbt_template.xlsx
src/turbovault4dbt/: main.py
src/turbovault4dbt/backend/: graph_utils.py
tests/: conftest.py  test_regression.py
tests/case_01/: input.xlsx
tests/case_01/csv/: standard_link.csv
tests/case_01/expected_output/: hub3.sql  hub4.sql  link1.sql  link2.sql  link3.sql  link4.sql  link_hub1.sql  link_hub2.sql  link_hub4.sql  masat0_hub4.sql  masat1.sql  masat10.sql  masat30.sql  masat4.sql  masat40.sql  masat_hub2.sql  masat_hub3.sql  masat_hub4.sql  nhsat1.sql  nhsat2.sql  nhsat3.sql  nhsat4.sql  nhsat_hub1.sql  nhsat_hub4.sql  sat0_hub1.sql  sat0_hub4.sql  sat1.sql  sat3.sql  sat30.sql  sat4.sql  sat40.sql  sat_hub2.sql  sat_hub3.sql  sat_hub4.sql  sources.yml  stg_hub1.sql  stg_hub2.sql  stg_hub3.sql  stg_hub4.sql  stg_link1.sql  (+14 more)
(+27 files in other folders)
